// Copyright 2017, TCN Inc.
// All rights reserved.
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:

//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of TCN Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.

// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";

package examples;

option go_package="github.com/tcncloud/protoc-gen-persist/examples;examples";

import "persist/options.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";


import "examples/test/test.proto";

message Table2 {
  int64 id = 1;
  google.protobuf.Timestamp start_time = 2;
  string name = 3;
}

message Filed {
  int64 id = 1;
  google.protobuf.Timestamp start_time = 2;
}

message Name {
  string name = 1;
}

message NumRows {
  int64 count = 1;
}


service Amazing {
  option (persist.service_type) = SQL;
  option (persist.mapping) = {
    types: [
      {
        proto_type_name: ".google.protobuf.Timestamp"
        proto_type:  TYPE_MESSAGE
        go_type: "MyTime"
        go_package: "github.com/tcncloud/protoc-gen-persist/examples/mytime"
      }
    ]
  };

  rpc UniarySelect(Filed) returns (Table2) {
    option (persist.ql) = {
      query: "SELECT * from example_table Where id=$1 AND start_time=$2"
      arguments: ["id", "start_time"]
    };
  };
  rpc ServerStream(Name) returns (stream Table2) {
    option (persist.ql) = {
      query: "SELECT * FROM example_table WHERE name=$1"
      arguments: ["name"]
    };
  };
  rpc Bidirectional(stream Table2) returns (stream Table2) {
    option (persist.ql) = {
      query: "UPDATE example_table SET (start_time, name) = ($2, $3) WHERE id=$1 RETURNING *"
      arguments: ["id", "start_time", "name"]
    };
  };
  rpc ClientStream(stream Table2) returns (NumRows) {
    option (persist.ql) = {
      query: "INSERT INTO example_table (id, start_time, name) VALUES ($1, $2, $3)"
      arguments: ["id", "start_time", "name"]
    };
  };
}
