// Copyright 2017, TCN Inc.
// All rights reserved.
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:

//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of TCN Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.

// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";

package examples;

option go_package="github.com/tcncloud/protoc-gen-persist/examples;examples";

import "persist/options.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";


import "examples/test/test.proto";
import "examples/example2.proto";

message Table2Range {
  int64 start_id = 1;
  int64 end_id = 2;
}

service MySpanner {
  option (persist.service_type) = SPANNER;

  option (persist.mapping) = {
    types: [
      {
        proto_type_name: ".google.protobuf.Timestamp"
        proto_type:  TYPE_MESSAGE
        go_type: "MyTime"
        go_package: "github.com/tcncloud/protoc-gen-persist/examples/mytime"
      }
    ]
  };

  rpc UniaryInsert(Table2) returns (Table2) {
    option (persist.ql) = {
      query: "Insert into example_table (id, start_time, name)  Values (?, ?, \"bananas\")"
      arguments: ["id", "start_time"]
    };
  };
  rpc UniarySelect(Table2) returns (Table2) {
    option (persist.ql) = {
      query: "SELECT * from example_table Where id=? AND name=?"
      arguments: ["id", "name"]
    };
  };
  rpc UniaryUpdate(Table2) returns (Filed) {
    option (persist.ql) = {
      query: "Update example_table set start_time=?, name=\"oranges\" where id=?",
      arguments: ["start_time", "id"],
    };
  };
  rpc UniaryDelete(Table2Range) returns (Table2) {
    option (persist.ql) = {
      query: "DELETE FROM example_table WHERE id>? AND id<?",
      arguments: ["start_id", "end_id"]
    };
  };
  rpc NoArgs(Table2) returns (Table2) {
    option (persist.ql) = {
      query: "select * from example_table limit 1",
      arguments: []
    };
  };
  rpc ServerStream(Name) returns (stream Table2) {
    option (persist.ql) = {
      query: "SELECT * FROM example_table"
      arguments: []
    };
  };
  rpc ClientStreamInsert(stream Table2) returns (NumRows) {
    option (persist.ql) = {
      query: "INSERT INTO example_table (id, start_time, name) VALUES (?, ?, ?)"
      arguments: ["id", "start_time", "name"]
    };
  };
  rpc ClientStreamDelete(stream Table2) returns (NumRows) {
    option (persist.ql) = {
      query: "delete from example_table where id=?",
      arguments: ["id"],
    };
  };
  rpc ClientStreamUpdate(stream Table2) returns (NumRows) {
    option (persist.ql) = {
      query: "update example_table set start_time=?, name=? where id=?",
      arguments: ["start_time", "name", "id"]
    };
  };

}
